--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ loguru = "^0.7.2"
 opencv-contrib-python = "^4.10.0.84"
 pillow = "^10.4.0"
 pyside6 = "^6.7.2"
+aenum = "^3.1.15"
 
 [build-system]
 requires = ["poetry-core"]
