--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Ana Anić Banić <git@ana.banic.hr>"]
 # readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.11,<3.14"
+python = ">=3.12,<3.14"
 opencv-contrib-python = "^4.10.0.84"
 pillow = "^11.0.0"
 pyside6 = "^6.8.1"
@@ -18,4 +18,4 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry-pyinstaller-plugin.scripts]
-frame-comparison-tool = { source = "__main__.py", type = "onefile", bundle = true }
+frame-comparison-tool = { source = "frame_comparison_tool/__main__.py", type = "onefile", bundle = true }
