--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,8 +12,9 @@ jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: 'false'
       matrix:
-        os: [ ubuntu-latest, macos-latest ]
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
         python-version: [ "3.12", "3.13" ]
 
     steps:
@@ -50,5 +51,5 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: dist-${{ runner.os }}-${{ matrix.python-version }}
-          path: 'dist/*'
+          path: 'dist/**'
           retention-days: 7
