--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,8 +30,8 @@ jobs:
         uses: snok/install-poetry@v1
         with:
           version: latest
-          virtualenvs-create: 'true'
-          virtualenvs-in-project: 'true'
+          virtualenvs-create: true
+          virtualenvs-in-project: true
 
       - name: Load cached Poetry virtualenv
         id: cached-poetry-dependencies
@@ -48,8 +48,8 @@ jobs:
         run: poetry build
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: dist-${{ runner.os }}-${{ matrix.python-version }}
-          path: 'dist/**'
+          path: dist/**
           retention-days: 7
