--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,10 @@ authors = ["Ana Anić Banić <git@ana.banic.hr>"]
 # readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.12,<3.14"
+python = ">=3.12,<3.13"
 opencv-contrib-python = "^4.10.0.84"
 pillow = "^11.0.0"
-pyside6 = "^6.8.1"
+pyside6 = "6.7.3" # TODO: Update after issue with QMessageBox is fixed
 aenum = "^3.1.15"
 loguru = "^0.7.3"
 
