--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,5 +17,8 @@ loguru = "^0.7.3"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.poetry-pyinstaller-plugin]
+disable-upx = true
+
 [tool.poetry-pyinstaller-plugin.scripts]
 frame-comparison-tool = { source = "frame_comparison_tool/__main__.py", type = "onefile", bundle = true }
